--- a/layout/partial/scripts.jade
+++ b/layout/partial/scripts.jade
@@ -9,4 +9,7 @@ if ga
         != '"' + ga + '"'
         | ,'auto');ga('send','pageview');
 
+script
+    <!-- Piwik --> <script type="text/javascript"> var _paq = _paq || []; // tracker methods like "setCustomDimension" should be called before "trackPageView" _paq.push(["setDocumentTitle", document.domain + "/" + document.title]); _paq.push(["setCookieDomain", "*.mikecoder.github.io"]); _paq.push(["setDomains", ["*.mikecoder.github.io/oj-code"]]); _paq.push(['trackPageView']); _paq.push(['enableLinkTracking']); (function() { var u="//piwik.mikecoder.cn/"; _paq.push(['setTrackerUrl', u+'piwik.php']); _paq.push(['setSiteId', '2']); var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0]; g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s); })(); </script>script> <noscript><p><img src="//piwik.mikecoder.cn/piwik.php?idsite=2&rec=1" style="border:0;" alt="" /></p>p></noscript>noscript> <!-- End Piwik Code -->
+
 
