update version to v0.0.2
1. add code highlight support
2. add tags in post detail page

--- a/layout/archive.jade
+++ b/layout/archive.jade
@@ -4,8 +4,8 @@ block container
     include mixins/post
     .archive
         h2(class='archive-year')= 'Tags'
-        script(type='text/javascript', charset='utf-8', src='/oj-code/js/tagcloud.js')
-        script(type='text/javascript', charset='utf-8', src='/oj-code/js/tagcanvas.js')
+        script(type='text/javascript', charset='utf-8', src='/js/tagcloud.js')
+        script(type='text/javascript', charset='utf-8', src='/js/tagcanvas.js')
         #myCanvasContainer.widget.tagcloud(align='center')
             canvas#resCanvas(width='600', height='500', align=center)
                 !=tagcloud()
