--- a/source/scss/_partial/base.scss
+++ b/source/scss/_partial/base.scss
@@ -24,6 +24,11 @@ ul.post-list {
     list-style-type: none;
 }
 
+.tag-title {
+    font-size: 1em;
+    color: #42b983;
+}
+
 ul {
     margin: 1rem 0;
 }
