--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -28,7 +28,7 @@ mixin postList()
             - var itemYear = date(item.date, 'YYYY') - 0;
             - change = year !== itemYear;
             - year = change ? itemYear : year;
-            if change 
+            if change
                 h2.archive-year!= year
             .post-item
                 +postInfo(item)
@@ -42,6 +42,12 @@ mixin post(item)
         article.post-block
             h1.post-title
                 != item.title
+
+            .tags
+                if item.tags
+                    for tag in item.tags.toArray()
+                        a.tag-title(href=url_for(tag.path))
+                            != tag.name
             +postInfo(item)
             .post-content
                 != item.content
