--- a/source/scss/_partial/mq.scss
+++ b/source/scss/_partial/mq.scss
@@ -4,7 +4,7 @@ main.container {
 
 @media screen and (min-width: 700px) {
     .wrap {
-        width: 700px;
+        width: 70%;
         margin: 0 auto;
     }
     header {
