--- a/layout/mixins/post.jade
+++ b/layout/mixins/post.jade
@@ -13,6 +13,11 @@ mixin posts()
                     h2.post-title
                         a.post-title-link(href= url_for(item.path))
                             != item.title
+                    .tags
+                        if item.tags
+                            for tag in item.tags.toArray()
+                                a.tag-title(href=url_for(tag.path))
+                                    != '#' + tag.name
                     +postInfo(item)
                     .post-content
                         != item.excerpt
@@ -47,7 +52,7 @@ mixin post(item)
                 if item.tags
                     for tag in item.tags.toArray()
                         a.tag-title(href=url_for(tag.path))
-                            != tag.name
+                            != '#' + tag.name
             +postInfo(item)
             .post-content
                 != item.content
