--- a/layout/partial/copyright.jade
+++ b/layout/partial/copyright.jade
@@ -1,7 +1,8 @@
 .copyright
     - var hexoURL = "https://hexo.io/";
     - var apolloURL = "https://github.com/pinggod/hexo-theme-apollo";
+    - var gandalfrURL = "https://github.com/MikeCoder/hexo-theme-gandalfr";
     - var currentDate = new Date();
     - var year = currentDate.getFullYear();
     - year = year == theme.startyear ? year : theme.startyear + ' - ' + year;
-    p © #{year} #[a(href=config.url)!= config.author], powered by #[a(href=hexoURL, target="_blank") Hexo] and #[a(href=apolloURL, target="_blank") hexo-theme-apollo].
+    p © #{year} #[a(href=config.url)!= config.author], powered by #[a(href=hexoURL, target="_blank") Hexo] and #[a(href=gandalfrURL, target="_blank")] and #[a(href=apolloURL, target="_blank") hexo-theme-apollo].
