--- a/layout/partial/copyright.jade
+++ b/layout/partial/copyright.jade
@@ -5,4 +5,4 @@
     - var currentDate = new Date();
     - var year = currentDate.getFullYear();
     - year = year == theme.startyear ? year : theme.startyear + ' - ' + year;
-    p © #{year} #[a(href=config.url)!= config.author], powered by #[a(href=hexoURL, target="_blank") Hexo] and #[a(href=gandalfrURL, target="_blank")] and #[a(href=apolloURL, target="_blank") hexo-theme-apollo].
+    p © #{year} #[a(href=config.url)!= config.author], powered by #[a(href=hexoURL, target="_blank") Hexo] and #[a(href=gandalfrURL, target="_blank") hexo-theme-gandalfr] and #[a(href=apolloURL, target="_blank") hexo-theme-apollo].
