source/scss/_partial/mq.scss

--- a/source/scss/_partial/mq.scss
+++ b/source/scss/_partial/mq.scss
@@ -13,6 +13,9 @@ main.container {
 }
 
 @media screen and (max-width: 700px) {
+    .tagcloud {
+        display: none !important;
+    }
     .wrap {
         width: 100%;
     }
