--- a/layout/archive.jade
+++ b/layout/archive.jade
@@ -3,7 +3,7 @@ extends partial/layout
 block container
     include mixins/post
     .archive
-        h2(class='archive-year')= 'Tags'
+        h2(class='archive-year tagcloud')= 'Tags'
         script(type='text/javascript', charset='utf-8', src='/js/tagcloud.js')
         script(type='text/javascript', charset='utf-8', src='/js/tagcanvas.js')
         #myCanvasContainer.widget.tagcloud(align='center')
