--- a/layout/mixins/paginator.jade
+++ b/layout/mixins/paginator.jade
@@ -2,16 +2,10 @@ mixin home()
     - var prev = page.prev_link
     - var next = page.next_link
     .paginator
-        if page.prev
-            a.prev(href=url_for(prev))!= __('prev') 
-        if page.next
-            a.next(href=url_for(next))!= __('next')
+        != paginator({prev_text: __('PREV'), next_text: __('NEXT')})
 
 mixin post()
     - var prev = page.prev ? page.prev.path : false;
-    - var next = page.next ? page.next.path : false; 
+    - var next = page.next ? page.next.path : false;
     .paginator
-        if prev
-            a.prev(href=url_for(prev))!= __('prev_post')
-        if next
-            a.next(href=url_for(next))!= __('next_post')
+        != paginator({prev_text: __('PREV'), next_text: __('NEXT')})
