--- a/layout/partial/comment.jade
+++ b/layout/partial/comment.jade
@@ -26,7 +26,7 @@ if theme.disqus
         })();
     script(id='dsq-count-scr' src='//#{theme.disqus}.disqus.com/count.js' async)
 
-if theme.LivereTower
+if theme.livere
     <div id="lv-container" data-id="city" data-uid="#{theme.livere}">
     script.
         (function(d, s) {
