--- a/source/scss/_partial/base.scss
+++ b/source/scss/_partial/base.scss
@@ -14,7 +14,7 @@ body {
     font-size: 15px;
     line-height: 1.4;
     background-color: #fff;
-    font-family: 'sourcesanspro', 'Helvetica Neue', Arial, sans-serif;
+    font-family: "PingFang SC", "Helvetica Neue", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Helvetica, Arial, Verdana, sans-serif;
 }
 
 ul.nav,
