--- a/layout/partial/head.jade
+++ b/layout/partial/head.jade
@@ -10,7 +10,7 @@ block description
 meta(name="viewport", content="width=device-width, initial-scale=1")
 link(rel="icon", href=url_for(theme.favicon))
 link(rel="stylesheet", href=url_for("css/gandalfr.css"))
-link(rel="stylesheet", href=url_for("https://raw.githubusercontent.com/highlightjs/highlight.js/master/src/styles/" + (theme.codestyle ? theme.codestyle : 'solarized-light') + ".css"))
+link(rel="stylesheet", href=url_for("//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/" + (theme.codestyle ? theme.codestyle : 'solarized-light') + ".min.css"))
 
 - var xml = config.url + '/atom.xml'
     link(rel="search", type="application/opensearchdescription+xml", href=xml, title=config.title)
