--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -118,7 +118,7 @@ code,
 pre {
     font-size: 0.8em;
     background-color: #f8f8f8;
-    font-family: 'Roboto Mono', Monaco, courier, monospace;
+    font-family: 'Fira Code', 'Source Code Pro', 'Consolas', courier, monospace;
 }
 
 .highlight {
