--- a/source/scss/_partial/normalize.scss
+++ b/source/scss/_partial/normalize.scss
@@ -230,7 +230,7 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace;
+  font-family: "Fira Code", "Source Code Pro", Consolas, monospace;
   font-size: 1em;
 }
 
